# modern-cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml
cmake/: BuildOptions.cmake  Conan.cmake  Utils.cmake
cmd/: CMakeLists.txt
include/: Hello.h
src/: Hello.cpp  main.cpp
test/: CMakeLists.txt
test/src/: Hello.cpp
